--- a/css/styles.css
+++ b/css/styles.css
@@ -75,9 +75,12 @@ section {
     height: 100%;
   }
 }
-/*section:nth-child(even) {
-  background: #f5f5f5;
-}*/
+.hero-content {
+  position: absolute;
+  width: 10vw;
+  top:50%;
+  transform:translate(-50%,-50%);
+}
 
 /* ===================================== */
 /* ===== THE INTERESTING STUFF NOW ===== */
