--- a/css/styles.css
+++ b/css/styles.css
@@ -77,10 +77,18 @@ section {
 }
 .hero-content {
   position: absolute;
-  width: 10vw;
-  top:50%;
-  transform:translate(-50%,-50%);
+  text-align: center;
+  width: 50vw;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
+.hero-content h2 {
+  color: #fff;
+  font-size: 2rem;
+}
+
+
 
 /* ===================================== */
 /* ===== THE INTERESTING STUFF NOW ===== */
