--- a/css/styles.css
+++ b/css/styles.css
@@ -87,14 +87,19 @@ section {
   color: #fff;
   font-size: 5rem;
   margin-bottom:2rem;
+  text-transform: uppercase;
 }
 .hero-content p {
   color: #fff;
   font-size: 2rem;
   margin-bottom:2rem;
 }
-
-
+.hero-content .btn {
+  color:#fff;;
+  border: 1px solid #fff
+  border-radius:2rem
+  font-size:1.5rem;
+}
 /* ===================================== */
 /* ===== THE INTERESTING STUFF NOW ===== */
 /* ===================================== */
