--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,8 @@ section {
 }
 .main-content {
   overflow:hidden;
+  position: relative;
+  z-index: 2
 }
 .hero {
   position: relative;
@@ -95,10 +97,11 @@ section {
   margin-bottom:2rem;
 }
 .hero-content .btn {
-  color:#fff;;
-  border: 1px solid #fff
-  border-radius:2rem
-  font-size:1.5rem;
+  color:#fff;
+  border: 1px solid #fff;
+  border-radius:3rem;
+  font-size:1.4rem;
+  padding: 1rem 2.5rem
 }
 /* ===================================== */
 /* ===== THE INTERESTING STUFF NOW ===== */
